fix alignment

--- a/css/app.css
+++ b/css/app.css
@@ -4,3 +4,12 @@ body {
     padding: 0;
     margin: 0;
 }
+.flexbox {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: flex-start;
+}
+.itemlayout.gridview {
+    margin-bottom: 30px!important;
+}
